[package]
name = "s3o2"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-s3 = { version = "1.109.0", features = ["test-util"] }
aws-smithy-http = "0.62.4"
aws-smithy-runtime-api = "1.9.1"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
globset = "0.4"
snafu = "0.8.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
[dev-dependencies]
tempfile = "3.23.0"
aws-smithy-mocks = "0.2.0"
rand = "0.9.2"
